<resources>
    <string name="app_name">The17VideoSample</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">搜尋</string>
    <string name="action_search＿title">標題</string>
    <string name="action_search_user">作者</string>
    <string name="please_input_search_key">請輸入要搜尋的作者：</string>
    <string name="cancel">取消</string>
    <string name="determine">確定</string>
    <string name="error">錯誤</string>
    <string name="net_error">網路錯誤請稍後再試！</string>
</resources>
